# ProjectMAD

./: README.md  data_analysis.ipynb  models.py  parse.py  parsed.json  pyproject.toml
.ipynb_checkpoints/: data_analysis-checkpoint.ipynb
