[project]
name = "new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.1",
    "numpy==2.2.4",
    "pandas==2.2.3",
]
